methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:5: error: not found: value getGroundcolor
      if(getGroundcolor()!=Color.green){
         ^SlugTracking:12: error: type mismatch;
 found   : Unit
 required: Boolean
    pickupBaggle();
                ^SlugTracking:11: error: type mismatch;
 found   : Unit
 required: Boolean
  if(isOverBaggle){
  ^