methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
    while(!isOverBaggle){
      forward();
      if(getGroundcolor()!=Color.green){
        backward();
        left();
        
      }
    }
  if(isOverBaggle){
    pickupBaggle();
  }
}